style/styles.css
/** @format */

.start-div {
  display: flex;
  flex-direction: column;
  background-image: url("../images/workspace-table-2.jpg");
  height: 50em;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.nav-name {
  display: inline-block;
  padding-right: 50em;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  font-size: large;
}

.nav-menu {
  float: right;
  padding: 0.5em;
}

.nav-other {
  display: inline-block;
  flex-direction: row-reverse;
  padding: 10px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  font-size: large;
}

.nav-alink {
  color: maroon;
  font-weight: bolder;
  font-style: oblique;
}

.about-div {
  display: inline-flex;
  background-color: mistyrose;
  width: 100%;
  height: 18em;
}

.about-p {
  width: 70em;
  height: 100px;
  margin-left: 3em;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  padding: 1em;
}

.span-hello {
  line-height: 5em;
  font-weight: bold;
}

.about-image {
  margin-left: 1em;
  margin-top: 1.5em;
  border-radius: 2em;
}

.resume-div {
  display: flex;
  background-color: white;
}

.resume-entry {
  color: black;
}

.resume-entry:hover {
  background-color: antiquewhite;
}

.resume-image {
  justify-content: center;
  margin-left: 1em;
  margin-right: 5em;
  margin-top: 2em;
  border-radius: 2em;
}

.edu-image {
  align-items: center;
  margin-left: 2em;
  margin-top: 1em;
}

.work-image {
  align-items: center;
  margin-top: 7em;
  margin-left: 2em;
}

.cert-image {
  align-items: center;
  margin-left: 2em;
}

.projects-div {
  background-color: mistyrose;
  padding-bottom: 1em;
}

.projects-h3 {
  padding: 1em;
  text-align: center;
  margin-bottom: 2em;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

.project-image {
  align-items: center;
  margin-left: 2em;
  margin-bottom: 1em;
}

.project-description {
  display: none;
}

.project-span {
  text-decoration: underline;
  cursor: pointer;
}

.contact-div {
  background-color: white;
}

.form-class {
  width: 600px;
}

input[type="submit"] {
  color: black;
  background-color: mistyrose;
  border-color: darksalmon;
}

input[type="submit"]:hover {
  color: black;
  background-color: darksalmon;
  border-color: darksalmon;
}

input[type="reset"] {
  color: black;
  background-color: lightgray;
  border-color: dimgray;
}

@media (min-width: 414px) and (max-width: 767px) {
  .start-div {
    height: 10em;
  }

  .nav-other {
    font-size: small;
    padding: 0.3em;
  }

  .nav-name {
    font-size: small;
    padding: 1em;
    margin-left: -2em;
  }

  .about-div {
    height: 10em;
  }

  .about-p {
    width: 30em;
    height: 200px;
    margin-left: 1em;
    font-size: small;
    padding: 1em;
  }

  .detail-info,
  .edu-image,
  .work-image,
  .cert-image {
    display: none;
  }

  .about-image {
    margin-left: 1em;
    margin-top: 1em;
    border-radius: 2em;
    width: 100px;
    height: 120px;
  }

  .projects-h3,
  .project-span,
  .project-h4 {
    font-size: medium;
    font-weight: bold;
    text-align: center;
    margin-bottom: 2em;
  }

  .content-heading,
  .contact-h3 {
    font-size: medium;
    font-weight: bold;
  }

  .resume-entry {
    margin-bottom: 1em;
    padding: 1em;
    font-size: small;
  }

  .project-image {
    height: 120px;
    width: 250px;
    margin-left: 4em;
    margin-right: 2em;
  }

  .row {
    justify-content: center;
  }

  .form-class {
    width: 400px;
  }
}

@media (min-width: 576px) and (max-width: 767px) {
  .project-image {
    height: 120px;
    width: 180px;
    margin-bottom: 1em;
    margin-top: 1em;
    padding-right: 20px;
    margin-left: -1em;
  }
}

@media (min-width: 768px) and (max-width: 1024px) {
  .start-div {
    height: 25em;
  }

  .nav-other {
    font-size: medium;
    padding: 0.3em;
  }

  .nav-name {
    font-size: medium;
    padding: 1em;
    margin-left: -2em;
    margin-right: 17em;
  }

  .about-div {
    height: 30em;
  }

  .about-p {
    width: 42em;
    height: 210px;
    margin-left: 1em;
    font-size: medium;
    padding: 1em;
  }

  .edu-image {
    width: 120px;
    height: 120px;
  }

  .work-image {
    width: 120px;
    height: 120px;
  }

  .cert-image {
    width: 120px;
    height: 120px;
  }

  .about-image {
    margin-left: 1em;
    margin-top: 4em;
    border-radius: 2em;
    width: 250px;
    height: 250px;
  }

  .project-image {
    height: 120px;
    width: 220px;
    margin-bottom: 1em;
    margin-top: 1em;
    padding-right: 20px;
    margin-left: -0.5em;
  }

  .resume-entry {
    padding: 1em;
  }
}

@media (min-width: 1024px) {
  .start-div {
    height: 30em;
  }

  .nav-other {
    font-size: large;
    padding: 0.3em;
  }

  .nav-name {
    font-size: large;
    padding: 1em;
    margin-left: -2em;
    margin-right: 17em;
  }

  .about-div {
    height: 25em;
  }

  .about-p {
    padding: 1em;
  }

  .resume-entry {
    padding: 1em;
  }

  .about-image {
    margin-left: 1em;
    margin-top: 4em;
    border-radius: 2em;
    width: 250px;
    height: 250px;
  }

  .project-image {
    height: 200px;
    width: 300px;
    margin-bottom: 1em;
    margin-top: 1em;
    padding-right: 20px;
    margin-left: -0.5em;
  }
}

